-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
None
-
Fully Compatible
-
ALL
-
Service Arch 2021-03-08
-
None
-
None
-
None
-
None
-
None
-
None
-
None
in the "humanReadable" segment of the backtrace dump,
and in the case that it was given a sink (not writing to LOGV2),
we emit frames like this, but there's no terminating newline.
*sink << fmt::format("\n Frame: {}", tojson(frame, ExtendedRelaxedV2_0_0));
Need a newline. This section of the output is specified to emit lines.
Without a newline, it's not a line. Trivial fix.