SERVER-54719 printStackTrace missing a terminating newline